[package]
name = "harborview"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = [ "full" ] }
axum = { version = "0.8.4", features = [ "macros" ] }
serde = { version = "1.0.219", features = [ "derive" ]}
binomial_tree = { version = "0.5.0" }
postgres = { version = "0.19.12" }

[dev-dependencies]
anyhow = "1.0.98"
httpc-test = "0.1.10"
